<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.udacity.todo.addedittask.AddEditTaskViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:enabled="@{viewModel.dataLoading}"
            app:refreshing="@{viewModel.dataLoading}">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/horizontal_margin"
                    android:paddingTop="@dimen/vertical_margin"
                    android:paddingRight="@dimen/horizontal_margin"
                    android:paddingBottom="@dimen/vertical_margin"
                    android:visibility="@{viewModel.dataLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/add_task_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:autofillHints="@string/title_hint"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/title_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/add_task_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:autofillHints="@string/description_hint"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/description_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="text"
                        android:text="@={viewModel.description}" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_task"
            android:onClick="@{()->viewModel.saveTask()}"
            android:src="@drawable/ic_done"
            app:fabSize="normal"
            app:layout_anchor="@id/nested_layout"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>