...
                </LinearLayout>
            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_task"
            android:onClick="@{() -> viewModel.navigateToNewTask()}"
            android:src="@drawable/ic_add"
...
